# zhiyong-fyp2022

./: LICENSE  Path_Planning English Commentary  README.md  contact.rst  display.rst  example_guide.rst  fill_trajectory.rst  frames.rst  install.bash  intralayers_display.rst  modify_trajectory.rst  path_planning.rst  release.bash  ros_additive_manufacturing.rosinstall
industrial_robot_angle_conversions/: CMakeLists.txt  LICENSE  README.md  package.xml
industrial_robot_angle_conversions/include/industrial_robot_angle_conversions/: angles.hpp  poses.hpp
industrial_robot_angle_conversions/src/: angles.cpp  poses.cpp
industrial_robot_angle_conversions/test/: angles_and_poses.cpp  angles_and_poses.launch
ram_display/: CMakeLists.txt  README.md  package.xml
ram_display/config/: services_clients.rviz
ram_display/src/: ram_display.cpp
ram_display/srv/: DeleteTrajectory.srv  DisplayRangeOfLayers.srv  DisplayTrajectory.srv  UpdateMeshColor.srv  UpdateSelection.srv
ram_display/test/: services_clients.cpp  services_clients.launch
ram_modify_trajectory/: CMakeLists.txt  package.xml
ram_modify_trajectory/msg/: BlendRadiusModification.msg  PoseInformationParameters.msg
ram_modify_trajectory/src/: modify_trajectory.cpp  pose_selector.cpp
ram_modify_trajectory/srv/: ChangeLayerHeight.srv  DeleteSelectedPoses.srv  EraseSelection.srv  GetPosesFromInformation.srv  GetPosesFromLayer.srv  GetPosesFromLayersList.srv  GetPosesFromTrajectory.srv  InvertSelection.srv  ModifySelectedPoses.srv  PushPullAngle.srv  ReflectSelectedPoses.srv  ResetSelectedPoses.srv  RotateSelectedPoses.srv  ScaleSelectedPoses.srv  ShiftPoses.srv  SimplifyTrajectory.srv  TrajectoryInterruption.srv  TweakBlendRadius.srv
ram_modify_trajectory/test/: pose_selector_test.cpp  pose_selector_test.launch
ram_msgs/: CMakeLists.txt  package.xml
ram_msgs/msg/: AdditiveManufacturingParams.msg  AdditiveManufacturingPose.msg  AdditiveManufacturingTrajectory.msg  AdditiveManufacturingTrajectoryInfo.msg  FillParameters.msg
ram_path_planning/: CMakeLists.txt  README.md  package.xml
ram_path_planning/action/: Contours.action  DonghongDing.action  FollowPoses.action  PolygonOffsets.action  Profile.action  Revolve.action
ram_path_planning/include/ram_path_planning/: contours.hpp  contours_imp.hpp  donghong_ding.hpp  donghong_ding_base.hpp  donghong_ding_base_imp.hpp  donghong_ding_imp.hpp  error_observer.hpp  follow_poses.hpp  follow_poses_imp.hpp  mesh_slicer.hpp  path_planning_algorithm.hpp  path_planning_algorithm_imp.hpp  polygon_offsets.hpp  polygon_offsets_imp.hpp  profile.hpp  profile_imp.hpp  revolve.hpp  revolve_imp.hpp  shemaphore.hpp  vtkRenderUpdaterTimer.hpp
ram_path_planning/launch/: path_planning.launch
ram_path_planning/meshes/: bridge.blend  bridge.ply  cone_truncated.blend  cone_truncated.ply  cube.blend  cube.stl  dome.blend  dome.ply  inclined_wall.blend  inclined_wall.stl  inversed_pyramid.blend  inversed_pyramid.ply  twisted_pyramid.blend  twisted_pyramid.ply  twisted_pyramid.stl  two_twisted_pyramids.blend  two_twisted_pyramids.ply
ram_path_planning/src/: mesh_slicer.cpp  path_planning.cpp
ram_path_planning/src/clipper/: clipper.cpp
ram_path_planning/svg/: polygon_with_hole.FCStd
ram_path_planning/test/: services_clients.cpp  services_clients.launch
ram_path_planning/yaml/: 2_polygons_3_contours.yaml  2_polygons_4_contours.yaml  H.yaml  circle.yaml  concave_1_contour.yaml  concave_3_contours.yaml  concave_4_contours_big.yaml  concave_4_contours_small.yaml  convex.yaml  cross.yaml  enclosed_circle_1.yaml  enclosed_circle_2.yaml  line.yaml  line_45deg.yaml  polygon_1_pose.yaml  polygon_intersection.yaml  polygon_with_hole.yaml  rectangle_with_hole.yaml  round_rectangle.yaml  square.yaml  star.yaml  two_thin_walls.yaml
ram_path_planning/yaml/closed_shapes/: H.yaml  circle.yaml  concave_1_contour.yaml  concave_3_contours.yaml  convex.yaml  cross.yaml  round_rectangle.yaml  star.yaml
ram_post_processor/: CMakeLists.txt  README.md  package.xml
ram_post_processor/include/ram_post_processor/: csv_post_processor.hpp  post_processor.hpp  post_processor_impl.hpp
ram_post_processor/msg/: ProgramInformation.msg  RobotProgram.msg  SaveOnDisk.msg
ram_post_processor/src/: csv_post_processor.cpp
ram_post_processor/srv/: GenerateCSV.srv
ram_qt_guis/: CMakeLists.txt  package.xml  plugin.xml
ram_qt_guis/config/: ram.rviz
ram_qt_guis/desktop/: ram_qt_guis.desktop.in
ram_qt_guis/include/ram_qt_guis/: display.hpp  entry_exit_strategies.hpp  fill_trajectory.hpp  frames.hpp  intralayers_display.hpp  (+8 more)
ram_qt_guis/launch/: gui.launch  nodes.launch
ram_qt_guis/scripts/: ram_qt_guis.bash.in
ram_qt_guis/src/: display.cpp  entry_exit_strategies.cpp  fill_trajectory.cpp  frames.cpp  intralayers_display.cpp  modify.cpp  path_planning.cpp  pose.cpp  pose_info.cpp  simulate.cpp  traj_info.cpp  trajectory_utils.cpp  tree_button.cpp
ram_trajectory/: CMakeLists.txt  package.xml
ram_trajectory/src/: 3d_trajectory.cpp
ram_trajectory/srv/: SimulateTrajectory.srv
ram_utils/: CMakeLists.txt  package.xml
ram_utils/scripts/: svg_parser.py
ram_utils/src/: frames_tf_broadcaster.cpp  trajectory_files_manager_1.cpp  trajectory_info.cpp
ram_utils/srv/: AddEntryExitStrategies.srv  BufferParams.srv  EntryExitParameters.srv  GetFillParameters.srv  GetLayerSize.srv  GetNumberOfLayersLevels.srv  GetTrajectoryInfos.srv  GetTrajectorySize.srv  ImportTrajectory.srv  ParseSvgFile.srv  UnmodifiedTrajectory.srv
ram_utils/test/: services_clients.cpp  services_clients.launch  testReadYamlFile.yaml  trajectory_files_manager_test.cpp  trajectory_files_manager_test.launch  trajectory_info_test.cpp  trajectory_info_test.launch
ros_additive_manufacturing/: CMakeLists.txt  package.xml
yaml_generators/: CMakeLists.txt  README.md  circle.cpp  display_yaml.cpp  read_csv_write_yaml.cpp  resize_yaml.cpp  round_rectangle.cpp  star.cpp  wall.cpp
yaml_generators/src/: entry_exit_strategies.cpp  file_extension.cpp  fill_trajectory_parameters.cpp  fix_uuid.cpp  trajectory_files_manager_2.cpp  trajectory_utils.cpp
(+45 files in other folders)
