<?xml version="1.0"?>
<package format="2">
  <name>ram_display</name>
  <version>0.0.4</version>
  <description>Display additive manufacturing markers in RViz</description>

  <author>Andres Campos - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD-3-Clause-Attribution</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend version_gte="3.6.1">rviz_visual_tools</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>ram_msgs</depend>
  <depend>ram_utils</depend>
  <depend>roscpp</depend>
  <depend>rviz</depend>
  <depend>std_msgs</depend>
  <depend>tf_conversions</depend>

  <test_depend>rostest</test_depend>
</package>
