<?xml version="1.0"?>
<package format="2">
  <name>ram_modify_trajectory</name>
  <version>0.0.4</version>
  <description>Allows to add, modify, reset and delete poses in the current trajectory</description>

  <author>Andres Campos - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD-3-Clause-Attribution</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen_conversions</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>ram_msgs</depend>
  <depend>ram_utils</depend>
  <depend>roscpp</depend>
  <depend>unique_id</depend>
  <depend>uuid_msgs</depend>

  <test_depend>rostest</test_depend>
</package>
