<?xml version="1.0"?>
<package format="2">
  <name>ram_msgs</name>
  <version>0.0.4</version>
  <description>Additive manufacturing messages</description>

  <author>Victor Lamoine - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD-3-Clause-Attribution</license>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>uuid_msgs</depend>
</package>
