<?xml version="1.0"?>
<package format="2">
  <name>ram_path_planning</name>
  <version>0.0.4</version>
  <description>Automatically compute additive manufacturing trajectories on multiple layers</description>

  <author>Andres Campos, Victor Lamoine - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD-3-Clause-Attribution</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>ram_msgs</depend>
  <depend>ram_utils</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>unique_id</depend>
  <depend>uuid_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>rostest</test_depend>
</package>
