<?xml version="1.0"?>
<package format="2">
  <name>ram_qt_guis</name>
  <version>0.0.4</version>
  <description>Qt GUI for additive manufacturing</description>

  <author>Victor Lamoine - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD-3-Clause-Attribution</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>class_loader</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>industrial_robot_angle_conversions</depend>
  <depend>ram_display</depend>
  <depend>ram_modify_trajectory</depend>
  <depend>ram_msgs</depend>
  <depend>ram_path_planning</depend>
  <depend>ram_trajectory</depend>
  <depend>ram_utils</depend>
  <depend>roscpp</depend>
  <depend>rqt_gui</depend>
  <depend>rviz</depend>
  <depend>tf2_ros</depend>
  <depend>tf_conversions</depend>

  <export>
    <rviz plugin="${prefix}/plugin.xml"/>
  </export>
</package>
