<?xml version="1.0"?>
<package format="2">
  <name>ram_trajectory</name>
  <version>0.0.4</version>
  <description>Move a robot along a additive manufacturing trajectory</description>

  <author>Victor Lamoine - Institut Maupertuis</author>
  <maintainer email="victor.lamoine@gmail.com">Victor Lamoine</maintainer>
  <license>BSD-3-Clause-Attribution</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen_conversions</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>ram_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf_conversions</depend>
  <depend>tf</depend>
</package>
